src/test/deca/context/valid/created/avec_objet/rule3.18/3.18.deca
// Test complet pour la règle 3.18
// Date: 18/01/2024
// Auteur: Jerome

class ClasseBloc {
    void methodeAvecBlocs() {
        int variableExterne = 10;

            int variableBloc1 = 20;
            println("Bloc 1, variableExterne: " + variableExterne);
            println("Bloc 1, variableBloc1: " + variableBloc1);

    }
}

class Test {
    void executionTest() {
        ClasseBloc obj = new ClasseBloc();
        obj.methodeAvecBlocs();
    }
}

// Programme principal
{
    Test testProgramme = new Test();
    testProgramme.executionTest();
}
